--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+
+
+
+
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <application
         android:label="juwelary"
         android:name="${applicationName}"
